* NEW: Fulltext search engine index ~4x faster (depending of the number of cores)
* NEW: kiwix-set-fileassoc.bat Windows script to setup zim-kiwix file association for "portable" usage
* NEW: GNU/Linux static compiled release ~50% smaller than before
* NEW: OSX universal binary package (x86_32 & x86_64)

Kiwix 0.9 beta5
* FIXED: letton language menu item (ID: 3439113)
* FIXED: Duplicates in publisher & language filters in the content manager (ID: 3439108)	
* FIXED: Many localisation files which were broken due to a buggy script (ID: 3440627)
* FIXED: Wrong behaviour in case of two different portable kiwix consecutive runs (ID: 3442083)
* FIXED: Different issues relative to ISO language codes (ID: 3439293)
* FIXED: On Windows, Media Defender complain about chp.exe (ID: 3389953)
* FIXED: Rendering issue when displaying two notifications consecutivly: only the last one was displayed.
* FIXED: Windows default install directory (to match standarts)
* FIXED: Missing Kiwix shortcuts menu entry on Win7 Application menu (ID: 3456428)
* FIXED: Buggy permission eskalation in Windows 7 installer (ID: 3442074)
* FIXED: Buggy behaviour if you close the last tab (ID: 3459365)
* FIXED: Double-checked menu items in language/skin menus in case of abandoned restart process
* FIXED: Few UI bugs related to the navigation history management (ID: 3444677)
* FIXED: Regression impacting reading of splitted big (more than 4GB) ZIM files (ID: 3463001)
* NEW: New supported user interface languages: Czech (cs), Upper Sorbian (hsb),
  Cyrillic Tatar (tt-cyrl), Lower Sorbian (dsb), Hindi (hi), Gujarati (gu), Tamil (ta)
* NEW: Switch off automatically if loading random article
* NEW: In the library, pressing <ENTER> in your local library directly open the file
* NEW: Greying "Load random article" menu entry if no content is loaded (ID: 3439112)
* NEW: Add the support of the "publisher" ZIM Metadata
* NEW: Improved library menus rendering (ID: 3439109)